--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -72,7 +72,7 @@
 /* === HERO SECTION === */
 .home {
   min-height: 100vh;
-  background-image: url('../../../public/images/Pages/background_hero.png');
+  background-image: url('/images/Pages/background_hero.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
